--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": ">=7.2.5",
+        "php": ">=8.1.0",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "composer/package-versions-deprecated": "1.11.99.1",
@@ -15,24 +15,26 @@
         "league/html-to-markdown": "^5.0",
         "sensio/framework-extra-bundle": "^6.1",
         "stof/doctrine-extensions-bundle": "^1.6",
-        "symfony/console": "5.3.*",
-        "symfony/dotenv": "5.3.*",
-        "symfony/expression-language": "5.3.*",
+        "symfony/console": "5.4.*",
+        "symfony/dotenv": "5.4.*",
+        "symfony/expression-language": "5.4.*",
         "symfony/flex": "^1.3.1",
-        "symfony/form": "5.3.*",
-        "symfony/framework-bundle": "5.3.*",
-        "symfony/http-foundation": "5.3.*",
-        "symfony/mailer": "5.3.*",
+        "symfony/form": "5.4.*",
+        "symfony/framework-bundle": "5.4.*",
+        "symfony/http-client": "5.4.*",
+        "symfony/http-foundation": "5.4.*",
+        "symfony/mailer": "5.4.*",
+        "symfony/mailjet-mailer": "5.4.*",
         "symfony/maker-bundle": "^1.31",
         "symfony/monolog-bundle": "^3.7",
-        "symfony/proxy-manager-bridge": "5.3.*",
-        "symfony/security-bundle": "5.3.*",
-        "symfony/translation": "5.3.*",
+        "symfony/proxy-manager-bridge": "5.4.*",
+        "symfony/security-bundle": "5.4.*",
+        "symfony/translation": "5.4.*",
         "symfony/twig-bundle": "^5.3",
-        "symfony/validator": "5.3.*",
-        "symfony/var-dumper": "5.3.*",
+        "symfony/validator": "5.4.*",
+        "symfony/var-dumper": "5.4.*",
         "symfony/webpack-encore-bundle": "^1.12",
-        "symfony/yaml": "5.3.*",
+        "symfony/yaml": "5.4.*",
         "symfonycasts/reset-password-bundle": "^1.9",
         "symfonycasts/verify-email-bundle": "^1.5",
         "twig/cssinliner-extra": "^3.3",
@@ -49,7 +51,11 @@
         "preferred-install": {
             "*": "dist"
         },
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "endroid/installer": true,
+            "symfony/flex": true
+        }
     },
     "autoload": {
         "psr-4": {
@@ -84,7 +90,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "5.3.*"
+            "require": "5.4.*"
         }
     }
 }
