--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,46 +1,43 @@
 security:
-    encoders:
-#        Symfony\Component\Security\Core\User\User: auto
-        App\Entity\User:
-            algorithm: auto
     enable_authenticator_manager: true
+    # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
-            Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
-            Symfony\Component\Security\Core\User\InMemoryUser: bcrypt
-
+        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        # used to reload user from session & other features (e.g. switch_user)
+        database_users:
+            entity:
+                class: 'App\Entity\User'
+                property: 'email'
 
-        app_backend_provider:
+        memory_users:
             memory:
                 users:
-                    novitz@gmail.com: { password: '%env(MEMORY_USER)%', roles: ['ROLE_ADMIN','ROLE_USER'] }
-
-        app_user_provider:
-            entity:
-                class: App\Entity\User
-                property: email
-        all_users:
+                    user_dev@exempl.es:
+                        password: '%user_dev_pwd%'
+                        roles: 'ROLE_USER'
+                    admin_dev@exempl.es:
+                        password: '%admin_dev_pwd%'
+                        roles: 'ROLE_ADMIN'
+        chain_provider:
             chain:
-                providers: ['app_backend_provider','app_user_provider']
-
+                providers: [ database_users, memory_users ]
 
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            #anonymous: true
             lazy: true
-            provider: all_users
-            guard:
-                authenticators:
-                    - App\Security\LoginFormAuthenticator
+            provider: chain_provider
+            form_login:
+                login_path: app_login
+                check_path: app_login
+                enable_csrf: true
             logout:
                 path: app_logout
                 # where to redirect after logout
-                target: public_index
+                # target: app_any_route
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
@@ -51,10 +48,5 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/admin/dose/days, roles: ROLE_ADMIN }
-        - { path: ^/admin/dose/day, roles: ROLE_ADMIN }
-        - { path: ^/admin/(product)/\d+/delete$, roles: ROLE_ADMIN }
-        - { path: ^/admin/dose/(frequency|moment)/\d+/(delete|update)$, roles: ROLE_ADMIN }
-        - { path: ^/admin, roles: ROLE_USER }
-#        - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+     - { path: ^/admin, roles: ROLE_USER }
+#     - { path: ^/profile, roles: ROLE_USER }
