--- a/composer.json
+++ b/composer.json
@@ -15,30 +15,31 @@
         "league/html-to-markdown": "^5.0",
         "sensio/framework-extra-bundle": "^6.1",
         "stof/doctrine-extensions-bundle": "^1.6",
-        "symfony/console": "5.4.*",
-        "symfony/dotenv": "5.4.*",
-        "symfony/expression-language": "5.4.*",
+        "symfony/console": "6.4.*",
+        "symfony/dotenv": "6.4.*",
+        "symfony/expression-language": "6.4.*",
         "symfony/flex": "^1.3.1",
-        "symfony/form": "5.4.*",
-        "symfony/framework-bundle": "5.4.*",
-        "symfony/http-client": "5.4.*",
-        "symfony/http-foundation": "5.4.*",
-        "symfony/mailer": "5.4.*",
-        "symfony/mailjet-mailer": "5.4.*",
+        "symfony/form": "6.4.*",
+        "symfony/framework-bundle": "6.4.*",
+        "symfony/http-client": "6.4.*",
+        "symfony/http-foundation": "6.4.*",
+        "symfony/mailer": "6.4.*",
+        "symfony/mailjet-mailer": "6.4.*",
         "symfony/maker-bundle": "^1.31",
         "symfony/monolog-bundle": "^3.7",
-        "symfony/proxy-manager-bridge": "5.4.*",
-        "symfony/security-bundle": "5.4.*",
-        "symfony/security-core": "5.4.*",
-        "symfony/security-csrf": "5.4.*",
-        "symfony/security-http": "5.4.*",
-        "symfony/translation": "5.4.*",
-        "symfony/twig-bundle": "^5.3",
-        "symfony/validator": "5.4.*",
-        "symfony/var-dumper": "5.4.*",
+        "symfony/proxy-manager-bridge": "6.4.*",
+        "symfony/security-bundle": "6.4.*",
+        "symfony/security-core": "6.4.*",
+        "symfony/security-csrf": "6.4.*",
+        "symfony/security-http": "6.4.*",
+        "symfony/translation": "6.4.*",
+        "symfony/twig-bundle": "6.4.*",
+        "symfony/validator": "6.4.*",
+        "symfony/var-dumper": "6.4.*",
         "symfony/webpack-encore-bundle": "^1.12",
-        "symfony/yaml": "5.4.*",
+        "symfony/yaml": "6.4.*",
         "symfonycasts/reset-password-bundle": "^1.22",
+        "symfonycasts/tailwind-bundle": "^0.6.0",
         "symfonycasts/verify-email-bundle": "^1.17",
         "twig/cssinliner-extra": "^3.3",
         "twig/extra-bundle": "^2.12|^3.0",
@@ -47,7 +48,7 @@
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
         "symfony/stopwatch": "^5.3",
-        "symfony/web-profiler-bundle": "^5.3"
+        "symfony/web-profiler-bundle": "6.4.*"
     },
     "config": {
         "optimize-autoloader": true,
@@ -78,7 +79,8 @@
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+            "assets:install %PUBLIC_DIR%": "symfony-cmd",
+            "importmap:install": "symfony-cmd"
         },
         "post-install-cmd": [
             "@auto-scripts"
@@ -93,7 +95,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "5.4.*"
+            "require": "6.4.*"
         }
     }
 }
