--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         "symfony/security-http": "6.4.*",
         "symfony/translation": "6.4.*",
         "symfony/twig-bundle": "6.4.*",
+        "symfony/ux-twig-component": "^2.19",
         "symfony/validator": "6.4.*",
         "symfony/var-dumper": "6.4.*",
         "symfony/webpack-encore-bundle": "^1.12",
