--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "symfony/security-core": "6.4.*",
         "symfony/security-csrf": "6.4.*",
         "symfony/security-http": "6.4.*",
+        "symfony/stimulus-bundle": "^2.19",
         "symfony/translation": "6.4.*",
         "symfony/twig-bundle": "6.4.*",
         "symfony/ux-twig-component": "^2.19",
