--- a/composer.json
+++ b/composer.json
@@ -33,8 +33,9 @@
         "symfony/security-csrf": "6.4.*",
         "symfony/security-http": "6.4.*",
         "symfony/stimulus-bundle": "^2.19",
-        "symfony/translation": "6.4.*",
+        "symfony/translation": "^6.4",
         "symfony/twig-bundle": "6.4.*",
+        "symfony/ux-icons": "^2.23",
         "symfony/ux-twig-component": "^2.19",
         "symfony/validator": "6.4.*",
         "symfony/var-dumper": "6.4.*",
